test/cli/scenarios_to_cli/other /scenario_mutate_validate_qos/kyverno-test.yaml
name: policy-qos
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: policy-qos
    rule: add-memory-limit
    resource: qos-demo
    kind: Deployment
    result: pass
  - policy: policy-qos
    rule: check-cpu-memory-limits
    resource: qos-demo
    kind: Deployment
    result: pass
