test/cli/scenarios_to_cli/other /scenario_mutate_validate_qos/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: policy-qos
spec:
#  validationFailureAction: "audit"
  rules:
    - name: add-memory-limit
      match:
         all:
          - resources:
              kinds:
                - Deployment
          selector:
            matchLabels:
              test: qos
      mutate:
        patchStrategicMerge:
          spec:
            template:
              spec:
                containers:
                  # the wildcard * will match all containers in the list
                  - (name): "*"
                    resources:
                      limits:
                        # add memory limit if it is not exist
                        "+(memory)": "300Mi"  
                        "+(cpu)": "100"
    - name: check-cpu-memory-limits
      match:
        all:
          - resources:
              kinds:
                - Deployment
          selector:
            matchLabels:
              test: qos
      validate:
        message: "Resource limits are required for CPU and memory"
        pattern:
          spec:
            template:
              spec:
                containers:
                # match all containers
                - (name): "*"
                  resources:
                    limits:
                      # cpu and memory are required
                      memory: "?*"
                      cpu: "?*"
